--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,21 @@
     <title>Contact</title>
 </head>
 <body>
-    
+    <h2>Contact Details</h2>
+    <p>📞 Phone no. - +91-8284082191</p>
+    <p>📧 Email - lakhwinder.sidhuu20@gmail.com</p>
+
+    <hr>
+    <form action="mailto:lakhwinder.sidhuu20@gmail.com" method="post" enctype="text/plain">
+        <label>Name: </label>
+        <input type="text" name="name">
+        <br>
+        <label>Email: </label>
+        <input type="email" name="email"><br>
+        <label>Message: </label><br>
+        
+        <textarea name="message" cols="30" rows="10"></textarea><br>
+        <input type="submit">
+    </form>
 </body>
 </html>
