modified:   index.html

--- a/index.html
+++ b/index.html
@@ -130,6 +130,16 @@
             </td>
         </tr>
     </table>
+
+    <!-- additional courses -->
+    <h3>Additional Courses 📚</h3>
+    <ul>
+        <li>Introduction to Programming with MATLAB - Vanderbilt University.</li>
+        <li>Introduction to User Experience Design - Georgia Institute of Technology</li>
+        <li>DataQuest.io - Python for Data Science Fundamentals I and II</li>
+    </ul>
+    
+
     <!-- contact -->
     <hr>
     <a href="contact.html">✉ Contact Me</a>
