--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
     <h3>Additional Courses 📚</h3>
     <ul>
         <li>Introduction to Programming with MATLAB - Vanderbilt University.</li>
-        <li>Introduction to User Experience Design - Georgia Institute of Technology</li>
-        <li>DataQuest.io - Python for Data Science Fundamentals I and II</li>
+        <li>Introduction to User Experience Design - Georgia Institute of Technology.</li>
+        <li>DataQuest.io - Python for Data Science Fundamentals I and II.</li>
     </ul>
     
 
