modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -45,103 +45,111 @@
     <!-- achievements -->
     <hr />
     <h3>Achievements 🥇</h3>
-    <ul >
+
+    <ul>
       <li>
-        Received letter of appreciation by <strong>Smt. Smriti Zubin Irani(Ministry of
-            Human Resource Development, 2015) </strong> exceptional academic performance
-        in class 10th.
+        Received letter of appreciation by
+        <strong
+          >Smt. Smriti Zubin Irani(Ministry of Human Resource Development, 2015)
+        </strong>
+        exceptional academic performance in class 10th.
       </li>
-      <li>Awarded <strong>MHRD Assistantship</strong> for clearing <strong>GATE exam</strong>.</li>
       <li>
-       <strong>Winner in IMPACT Category - Hackathon (code with Harnoor)</strong> organised on
-        devpost.
+        Awarded <strong>MHRD Assistantship</strong> for clearing
+        <strong>GATE exam</strong>.
+      </li>
+      <li>
+        <strong
+          >Winner in IMPACT Category - Hackathon (code with Harnoor)</strong
+        >
+        organised on devpost.
       </li>
       <ul>
         <li>designed the whole app idea using Figma.</li>
         <li>formulated new ways to help out people in a medical emergency.</li>
         <li>was the design lead in the participating team.</li>
         <li>
-          app won the award in the IMPACT category <strong>out of 336 participants</strong>.
+          app won the award in the IMPACT category
+          <strong>out of 336 participants</strong>.
         </li>
       </ul>
       <li>
-        Participated in <strong>Hacktoberfest 2022</strong> and contributed to opensource
-        projects.
+        Participated in <strong>Hacktoberfest 2022</strong> and contributed to
+        opensource projects.
       </li>
     </ul>
 
     <!-- skills -->
     <hr />
     <h3>Skills 🤹‍♀️</h3>
-    
 
-    <table class="skills">
-        <tr>
-            <td>
-                <table>
-                    <tr>
-                        <td>Frontend Development</td>
-                        <td>⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>Backend Development</td>
-                        <td>⭐</td>
-                    </tr>
-                    <tr>
-                        <td>UI-UX Design</td>
-                        <td>⭐⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>Programming Languages</td>
-                    </tr>
-                    <tr>
-                        <td>MATLAB</td>
-                        <td>⭐⭐⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>HTML</td>
-                        <td>⭐⭐⭐⭐⭐</td>
-                    </tr>
-                </table>
-            </td>
-            <td>
-                <table>
-                    <tr>
-                        <td>CSS</td>
-                        <td>⭐⭐⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>JAVA</td>
-                        <td>⭐⭐⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>JAVASCRIPT</td>
-                        <td>⭐⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>C++</td>
-                        <td>⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>PYTHON</td>
-                        <td>⭐⭐⭐</td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-    </table>
+    <div class="skills">
+      <div>
+        <table>
+          <tr>
+            <td>Frontend Development</td>
+            <td>⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>Backend Development</td>
+            <td>⭐</td>
+          </tr>
+          <tr>
+            <td>UI-UX Design</td>
+            <td>⭐⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td><u>Programming Languages</u></td>
+          </tr>
+          <tr>
+            <td>MATLAB</td>
+            <td>⭐⭐⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>HTML</td>
+            <td>⭐⭐⭐⭐⭐</td>
+          </tr>
+        </table>
+      </div>
+      <div>
+        <table>
+          <tr>
+            <td>CSS</td>
+            <td>⭐⭐⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>JAVA</td>
+            <td>⭐⭐⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>JAVASCRIPT</td>
+            <td>⭐⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>C++</td>
+            <td>⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>PYTHON</td>
+            <td>⭐⭐⭐</td>
+          </tr>
+        </table>
+      </div>
+    </div>
 
     <!-- additional courses -->
     <h3>Additional Courses 📚</h3>
     <ul>
-        <li>Introduction to Programming with MATLAB - Vanderbilt University.</li>
-        <li>Introduction to User Experience Design - Georgia Institute of Technology.</li>
-        <li>DataQuest.io - Python for Data Science Fundamentals I and II.</li>
+      <li>Introduction to Programming with MATLAB - Vanderbilt University.</li>
+      <li>
+        Introduction to User Experience Design - Georgia Institute of
+        Technology.
+      </li>
+      <li>DataQuest.io - Python for Data Science Fundamentals I and II.</li>
     </ul>
-    
 
     <!-- contact -->
-    <hr>
+    <hr />
     <a href="contact.html">✉ Contact Me</a>
   </body>
 </html>
